<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<group android:checkableBehavior="single">
		<item
			android:id="@+id/navigation_schedule"
			android:icon="@drawable/ic_schedule"
			android:title="@string/navigation_schedule" />
		<item
			android:id="@+id/navigation_news"
			android:icon="@drawable/ic_news"
			android:title="@string/navigation_news" />
		<item
			android:id="@+id/navigation_rating"
			android:icon="@drawable/ic_rating"
			android:title="@string/navigation_rating" />
		<item
			android:id="@+id/navigation_enterprise"
			android:icon="@drawable/ic_enterprise"
			android:title="@string/navigation_enterprise" />
		<item
			android:id="@+id/navigation_map"
			android:icon="@drawable/ic_map"
			android:title="@string/navigation_map" />
		<item
			android:id="@+id/navigation_contact"
			android:icon="@drawable/ic_contact"
			android:title="@string/navigation_contact" />
	</group>

</menu>
